--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -62,6 +62,10 @@ body {
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  border-radius: 12px;
+  &:active {
+    opacity: 0.85;
+  }
   
   .zaui-icon {
     flex-shrink: 0;
